<resources>
    <string name="app_name">RelaxReferReflect</string>
    <string name="relax">Relax</string>
    <string name="refer">Refer</string>
    <string name="reflect">reflect</string>
    <string name="spaceHolder">Inspirational Quote</string>
    <string name="stop_all">Stop all</string>
    <string name="help">help</string>
    <string name="mood_reflection">Mood Reflection</string>
    <string name="clear">Clear</string>
    <string name="pick_a_date">Pick a date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textsize">TextSize</string>
    <string name="textcolor">textColor</string>
    <string name="textstyle">textStyle</string>
</resources>
