<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#f6f5ca">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/spaceHolder"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:id="@+id/quoteSpot"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/relax"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_weight="1"
        android:background="#f6d2b4"
        android:layout_margin="10dp"
        android:id="@+id/relax"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/refer"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_weight="1"
        android:background="#f6d2b4"
        android:layout_margin="10dp"
        android:id="@+id/refer"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/reflect"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_weight="1"
        android:background="#f6d2b4"
        android:layout_margin="10dp"
        android:id="@+id/reflect"
        />


</LinearLayout>