<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReflectActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_reflection"
        android:layout_margin="10dp"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/title"
        android:padding="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:text="@string/help"
    android:background="@color/colorAccent"
    android:layout_margin="10dp"
    android:textSize="26sp"
    android:id="@+id/help_reflect"
    android:padding="10dp"
    android:layout_gravity="center_horizontal"
    />
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/clear"
        android:background="@color/colorAccent"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:id="@+id/clear"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_date"
        android:background="@color/colorAccent"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:id="@+id/date"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:layout_margin="10dp"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editText"
        android:padding="10dp"
        android:inputType="textMultiLine"
        />


</LinearLayout>